# CsPuzzles

./: .gitignore  CMakeLists.txt  arraysBasics.cpp  inputHandling.cpp  outputPatterns.cpp
Arrays/: 3.1.cpp  3.1.py  3.2.cpp  3.3.cpp  3.4.cpp  3.6.cpp  3.7.cpp  3.8.cpp
Classes/: 5.1.cpp  5.3.cpp  5.7.cpp
IO/: inputHandling.cpp
Patterns & components/: 7.1.cpp
Pointers/: 4.1.cpp  4.2.cpp  4.4.cpp  4.5.cpp  4.6.cpp  4.9.cpp
Recursion/: 6.1.cpp  6.10.cpp  6.11.cpp  6.2.cpp  6.3.cpp  6.9.cpp
